# ZeroTrustBounties

./: .gitignore  CONTEXT.md  Cargo.toml  README.md  ZTB_Sprint4_Problemes_Solutions.docx  _.txt  deployment.json  eslint_errors.json  hardhat.config.cjs  install-prereqs.sh  package-lock.json  package.json  payload_c1a.json  start.sh  test_assert.wasm  tsconfig.json
app/: globals.css  layout.tsx  page.tsx  providers.tsx  theme-toggle.tsx
app/hacker/: page.tsx
app/sponsor/: page.tsx
contracts/: MockRiscZeroVerifier.sol  MockUSDT.sol  ZTBEscrow.sol  ZTBEscrowUpgradeable.sol
exemple/: guest_verifier.wasm
hardhat-env/scripts/: test_script.ts
hooks/: useZTBContract.ts
host/: Cargo.toml
host/src/: main.rs
lib/: ecies.ts  ipfs.ts  wagmi.config.ts
lib/abi/: ZTBEscrow.abi.ts
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
script/: DeployZTB.s.sol
scripts/: deploy.cjs
src/components/: HackerSubmit.tsx
src/utils/: crypto.ts
test/: ZTBEscrow.test.js
wasm_tests/: happy_c2.wasm  happy_c2.wat  happy_reentrance.wat  integrity.wasm
ztb-frontend/: deployment.json  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
ztb-frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
ztb-frontend/app/explorer/: page.tsx
ztb-frontend/app/hacker/: page.tsx
ztb-frontend/app/sponsor/: page.tsx
ztb-frontend/app/sponsor/dashboard/: page.tsx
ztb-frontend/components/: AnimatedBackground.tsx  Navbar.tsx
ztb-frontend/components/ui/: Badge.tsx  Button.tsx  CLICommand.tsx  Card.tsx  DropZone.tsx  ParameterCard.tsx  RewardSlider.tsx  StepIndicator.tsx
ztb-frontend/contracts/: ZTBEscrow.sol
ztb-frontend/hardhat-env/: package-lock.json  package.json
ztb-frontend/hardhat-env/contracts/: ZTBEscrow.sol
ztb-frontend/hardhat-env/test/: ZTBEscrow.test.ts
ztb-frontend/hooks/: useZTBContract.ts
ztb-frontend/lib/: ecies.ts  ipfs.ts  wagmi.config.ts  wagmi.ts
ztb-frontend/lib/abi/: ZTBEscrow.abi.ts
ztb-frontend/scripts/: deploy.cjs
ztb-frontend/test/: ZTBEscrow.test.ts
ztb-zkvm/: gen_baseline.py  proof.json  test.wat  test_assert.wat
ztb-zkvm/host/: Cargo.toml
ztb-zkvm/methods/: Cargo.toml
ztb-zkvm/methods/guest/: Cargo.toml
ztb-zkvm/methods/guest/src/: main.rs
ztb-zkvm/wasm_tests/: happy_c1a.wat  happy_reentrance.wasm  rejection.wasm  rejection.wat
