[package]
name    = "methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { path = "/home/azureuser/risc0/risc0/zkvm", default-features = false, features = ["std"] }
wasmi = "0.31"
wasmparser = { version = "0.118", default-features = false }
bincode    = { version = "1.3", default-features = false }
sha2  = { version = "0.10", features = ["force-soft"] }
serde = { version = "1.0", features = ["derive"] }
