[package]
name    = "methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.1", default-features = false, features = ["std"] }
wasmi = { version = "0.31", default-features = false, features = ["std"] }
wasmparser = { version = "0.118", default-features = false }
bincode    = { version = "1.3", default-features = false }
sha2  = { version = "0.10", features = ["force-soft"] }
serde = { version = "1.0", features = ["derive"] }
