[package]
name    = "host"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "ztb-prove"
path = "src/main.rs"

[dependencies]
# ── RISC Zero ─────────────────────────────────────────────────────────────────
risc0-zkvm = { version = "3.0", features = ["std"] }
methods     = { path = "../methods" }

# ── Bonsai cloud prover ───────────────────────────────────────────────────────
# Activated at runtime via --prove-cloud flag.
# Requires BONSAI_API_KEY + BONSAI_API_URL env vars.
bonsai-sdk = { version = "1.4" }
tokio      = { version = "1",   features = ["rt-multi-thread", "macros", "time"] }

# ── CLI ───────────────────────────────────────────────────────────────────────
clap = { version = "4", features = ["derive"] }

# ── Crypto / parsing ──────────────────────────────────────────────────────────
sha2       = { version = "0.10", features = ["force-soft"] }
wasmparser = "0.118"
bincode    = "1.3"
serde      = { version = "1.0", features = ["derive"] }

# ── Proof serialization / encoding ───────────────────────────────────────────
serde_json = "1.0"
hex        = "0.4"
